<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="safemap.cscpbc.org.safemap.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">
            <Button
                android:id="@+id/buttonSwim"
                android:background="@drawable/swim_lessons"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_weight="1"
                android:text="@string/swimLessonsLabel"
                android:textColor="@color/colorImageText"
                android:gravity="left"
                android:paddingTop="20dip"
                android:paddingLeft="10dip"
                android:textAppearance="@style/OverlayTextStyle"
                android:onClick="swimButtonClick" />
            <Button
                android:id="@+id/buttonCarSeat"
                android:background="@drawable/car_seat_install"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_weight="1"
                android:text="@string/carSeatLabel"
                android:textColor="@color/colorImageText"
                android:gravity="left"
                android:paddingTop="20dip"
                android:paddingLeft="10dip"
                android:textAppearance="@style/OverlayTextStyle"
                android:onClick="carSeatButtonClick" />
            <Button
                android:id="@+id/buttonHelmet"
                android:background="@drawable/helmet_fitting"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_weight="1"
                android:text="@string/helmetFittingLabel"
                android:textColor="@color/colorImageText"
                android:gravity="left"
                android:paddingTop="20dip"
                android:paddingLeft="10dip"
                android:textAppearance="@style/OverlayTextStyle"
                android:onClick="helmetButtonClick" />
            <Button
                android:id="@+id/buttonPillDrop"
                android:background="@drawable/pill_drop_off"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_weight="1"
                android:text="@string/pillDropOffLabel"
                android:textColor="@color/colorImageText"
                android:gravity="left"
                android:paddingTop="20dip"
                android:paddingLeft="10dip"
                android:textAppearance="@style/OverlayTextStyle"
                android:onClick="pillDropButtonClick" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="3">
                <TextView
                    android:id="@+id/emailLink"
                    android:text="@string/eMailLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@android:color/holo_blue_light"
                    android:gravity="center_vertical|left"
                    android:padding="5dp"
                    android:onClick="emailClick" />
                <ImageView
                    android:src="@drawable/stacked_csc_logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/fullSiteLink"
                    android:text="@string/fullWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@android:color/holo_blue_light"
                    android:gravity="center_vertical|right"
                    android:padding="5dp"
                    android:onClick="websiteClick" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
